RESOLVED FIXED107182
IndexedDB: Conditionalize usage of env_idb.h to fix build for non-Chromium ports
https://bugs.webkit.org/show_bug.cgi?id=107182
Summary IndexedDB: Conditionalize usage of env_idb.h to fix build for non-Chromium ports
Michael Pruett
Reported 2013-01-17 14:48:55 PST
Currently Source/WebCore/platform/leveldb/LevelDBDatabase.cpp includes <env_idb.h>. This file is available only for the Chromium port but an implementation should be made available for other ports.
Attachments
Patch (3.44 KB, patch)
2013-01-17 15:47 PST, Martin Robinson
no flags
Patch (1.78 KB, patch)
2013-01-17 16:57 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2013-01-17 15:47:29 PST
David Grogan
Comment 2 2013-01-17 15:49:18 PST
Comment on attachment 183301 [details] Patch lgtm
Martin Robinson
Comment 3 2013-01-17 16:02:32 PST
Thanks David. I'll wait for all the bubbles to turn green before committing this.
Tony Chang
Comment 4 2013-01-17 16:13:25 PST
Comment on attachment 183301 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=183301&action=review > Source/WebCore/platform/leveldb/LevelDBDatabase.cpp:58 > +#if PLATFORM(CHROMIUM) > +static leveldb::Env* defaultLevelDBEnvironment() > +{ > + return leveldb::IDBEnv(); > +} > +#else > +static leveldb::Env* defaultLevelDBEnvironment() Nit: Why not scope the #if around the return?
Martin Robinson
Comment 5 2013-01-17 16:22:11 PST
(In reply to comment #4) > (From update of attachment 183301 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=183301&action=review > > > Source/WebCore/platform/leveldb/LevelDBDatabase.cpp:58 > > +#if PLATFORM(CHROMIUM) > > +static leveldb::Env* defaultLevelDBEnvironment() > > +{ > > + return leveldb::IDBEnv(); > > +} > > +#else > > +static leveldb::Env* defaultLevelDBEnvironment() > > Nit: Why not scope the #if around the return? Just my preference against having conditional compilation inside functions instead of surrounding them. Michael actually suggested a way to make this patch simpler, so I'll try that.
Martin Robinson
Comment 6 2013-01-17 16:57:24 PST
Martin Robinson
Comment 7 2013-01-17 20:05:09 PST
Note You need to log in before you can comment on or make changes to this bug.