IndexedDB: Conditionalize usage of env_idb.h to fix build for non-Chromium ports https://bugs.webkit.org/show_bug.cgi?id=107182

No new tests. This is a build fix.

* platform/leveldb/LevelDBDatabase.cpp: Use the default environment for non-Chromium
ports instead of the Chromium-specific one provided by env_idb.h.

Canonical link: https://commits.webkit.org/125462@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140099 268f45cc-cd09-0410-ab3c-d52691b4dbfc